--- a/.github/workflows/deploy-apache.yml
+++ b/.github/workflows/deploy-apache.yml
@@ -21,7 +21,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        region: us-east-1
+        aws-region: us-east-1
 
     # Étape 3 : Configurer kubectl pour interagir avec votre cluster EKS
     - name: Install kubectl
