--- a/apache-service.yaml
+++ b/apache-service.yaml
@@ -3,5 +3,13 @@ kind: Service
 metadata:
   name: apache-service
   namespace: kubespace
-spec:
-  selec
+spec:  
+  type: NodePort
+  selector:
+    app: apache-deployment
+  ports:
+    - protocol: TCP
+      port: 80       # Port interne du cluster
+      targetPort: 8080  # Port du conteneur
+      nodePort: 30088 # Port exposé sur le nœud
+
